--- a/insta-clone/src/app/login/login.component.html
+++ b/insta-clone/src/app/login/login.component.html
@@ -5,11 +5,13 @@
         <img src="https://i.imgur.com/zqpwkLQ.png" />
       </div>
       <div class="row input-row">
-        <input type="text" placeholder="Phone number, username or email" #instaHandle class="input-1" />
-      
-        <input type="password" placeholder="Password" #password class="input-2" />
-      
-        <input type="button" (click)="loginFunction()" value="Log In" class="btn login-btn"/>  
+        <form #form="ngForm" (ngSubmit)="loginFunction(form.value)">
+          <input type="text" name="instaHandle" required #instaHandle="ngModel" ngModel  placeholder="Phone number, username or email"  class="input-1" />
+        
+          <input type="password" name="password" required #password="ngModel" ngModel placeholder="Password"  class="input-2" />
+        
+          <button type="submit" [disabled]="form.invalid" class="btn login-btn">Log In</button> 
+        </form>
       </div>
 
       <div class="row or-row">
@@ -17,6 +19,11 @@
       </div>
       <div class="row login-with-fb-row">
         <button class="btn login-with-fb"><img src="../../assets/images/fb.png"> Log in with Facebook</button>
+      </div>
+      <div>
+        <small  class="warning" [style.display]="warning ? 'block' : 'none'">
+          {{warningText}}
+        </small>
       </div>
       <div class="row forgot-pass-row">
         <a href="#">Forgot Password?</a>
@@ -92,5 +99,5 @@
     </a>  
 
   </div>  
-</div>  <!-- App-img end-->
+</div>  App-img end-->
  
