--- a/insta-clone/src/app/create-post/create-post.component.html
+++ b/insta-clone/src/app/create-post/create-post.component.html
@@ -28,8 +28,8 @@
         <p class="user_details--username">username</p>
         <p class="user_details--name">name</p>
     </div> -->
-    <textarea name="caption" class="post-create__primary--post_area" placeholder="Show to the world!" [innerHtml]="caption" ngModel (ngModelChange)="styleCaption($event)"></textarea>
-    <div [innerHtml]="caption"></div>
+    <textarea name="caption" placeholder="Show to the world!" ngModel (ngModelChange)="styleCaption($event)"></textarea>
+    <div class="post-create__primary--post_area" [innerHtml]="caption"></div>
   </div>
   <div class="post-create__secondary">
     <label class="custom-file-input-label" for="file-input">
