--- a/insta-clone/src/app/create-post/create-post.component.scss
+++ b/insta-clone/src/app/create-post/create-post.component.scss
@@ -80,14 +80,21 @@ a{
             font-size: 1.6rem;
             margin-left: 0.8rem;
             width: 52rem;
-            height: 6rem;
+            height: 8rem;
             resize: none;
             color: #333;
             border: none;
             outline: none;
-
-            overflow: -moz-scrollbars-none;
+            word-wrap: break-word;
+            overflow-y: scroll;
             -ms-overflow-style: none;
+
+            p{
+                word-wrap: break-word;
+                overflow-y: scroll;
+                -ms-overflow-style: none;
+                &::-webkit-scrollbar { width: 0 !important }
+            }
 
             &::placeholder{
                 color: #cdcdcd;
@@ -146,4 +153,10 @@ a{
 
 .highlight{
     color: #38a1f3;
+}
+
+textarea{
+    width: 4rem;
+    height: 1rem;
+    resize: none;
 }
