--- a/insta-clone/src/app/homenav/homenav.component.html
+++ b/insta-clone/src/app/homenav/homenav.component.html
@@ -10,7 +10,7 @@
         <input #searchBox (input)="search(searchBox.value)" (blur)="onBlur()" [(ngModel)]="valuee" id="searchBox" type="search" placeholder="Search" value=""/>
         <ul class="search-result " *ngIf="searchBox.value.length > 0 && isVisible">
             <li *ngFor="let user of users$ | filter: searchBox.value">
-              <a [routerLink]="['/profile', user._id]" (click)="searchUser(user._id)">
+              <a [routerLink]="['/profile', user.instaHandle]" (click)="searchUser(user._id)">
                 {{user.instaHandle || user._id}}
               </a>
               <p >{{user.name}}</p>
