--- a/insta-clone/src/app/profile-dashboard/profile-dashboard.component.html
+++ b/insta-clone/src/app/profile-dashboard/profile-dashboard.component.html
@@ -20,8 +20,8 @@
                   <div class="followers-name">{{followers.follower.followerId.name}}</div>
                 </div>
                 <div class="col-lg-3">
-                    <a  ><button class="btn btn-primary follow-btn" *ngIf="followers.follower.followerId._id != loggedinUserId && !followers.relation" (click)="follow(followers.follower.followerId._id)">Follow</button></a>
-                    <a ><button class="btn unfollow-btn" *ngIf="followers.follower.followerId._id != loggedinUserId && followers.relation" (click)="unfollow(followers.follower.followerId._id)">Following</button></a>
+                    <a  ><button class="btn btn-primary follow-btn" *ngIf="followers.follower.followerId._id != loggedinUserId && !followers.relation" (click)="follow(followers.follower.followerId.instaHandle)">Follow</button></a>
+                    <a ><button class="btn unfollow-btn" *ngIf="followers.follower.followerId._id != loggedinUserId && followers.relation" (click)="unfollow(followers.follower.followerId.instaHandle)">Following</button></a>
                 </div>
               </div>    
           </div>
@@ -54,8 +54,8 @@
                       <div class="following-name">{{following.following.followingId.name}}</div>
                     </div>
                     <div class="col-lg-3">
-                        <a ><button class="btn btn-primary follow-btn" *ngIf="following.following.followingId._id != loggedinUserId && !following.relation" (click)="follow(following.following.followingId._id)">Follow</button></a>
-                        <a ><button class="btn unfollow-btn" *ngIf="following.following.followingId._id != loggedinUserId && following.relation" (click)="unfollow(following.following.followingId._id)">Following</button></a>
+                        <a ><button class="btn btn-primary follow-btn" *ngIf="following.following.followingId._id != loggedinUserId && !following.relation" (click)="follow(following.following.followingId.instaHandle)">Follow</button></a>
+                        <a ><button class="btn unfollow-btn" *ngIf="following.following.followingId._id != loggedinUserId && following.relation" (click)="unfollow(following.following.followingId.instaHandle)">Following</button></a>
                     </div>
                   </div> 
               </div>
