--- a/insta-clone/src/app/create-post/create-post.component.html
+++ b/insta-clone/src/app/create-post/create-post.component.html
@@ -1,26 +1,3 @@
-<!-- <div class="file-upload">
-    <input type="file" name="image" ng2FileSelect [uploader] = "uploader">
-    <button type="submit" (click)="uploader.uploadAll()" [disabled] = "!uploader.getNotUploadedItems().length">Upload</button> 
-</div> -->
-<!-- <div class="h-100">
-    <div class="image-upload text-center">
-        <label for="file-input">
-          <img src="https://icon-library.net/images/upload-photo-icon/upload-photo-icon-21.jpg"/>
-        </label>
-        <input id="file-input" type="file" />
-    </div>
-    
-    <div class="form-group text-center">
-        <label>Add post</label>
-        <input class="form-control" type="text" name="fullname" required placeholder="Write your thoughts!!"/>
-        <span class="Error"></span>
-    </div>
-    
-    <div class="form-group text-center ">
-        <input class="btn btn-primary btn-block" type="submit" value="Post"/>
-    </div>
-</div> -->
-
 <form class="post-create" #form="ngForm" (ngSubmit)="createPostHandler(form.value)">
   <div class="post-create__primary">
     <div class="post-create__primary--user_img"></div>
@@ -29,13 +6,13 @@
         <p class="user_details--name">name</p>
     </div> -->
     <label for="caption" class="post-create__primary--post_area" [innerHtml]="caption"></label>
-    <textarea id="caption" name="caption" placeholder="Show to the world!" ngModel (ngModelChange)="styleCaption($event)"></textarea>
+    <textarea id="caption" name="caption" placeholder="Show to the world!" [ngModel]="caption" (ngModelChange)="styleCaption($event)"></textarea>
   </div>
   <div class="post-create__secondary">
     <label class="custom-file-input-label" for="file-input">
       <a class="post-create--image_upload"><i class="fa fa-image fa-2x"></i></a>
     </label>
-    <input id="file-input" name="imageFile" type="file" accept="image/*" class="custom-file-input" ngModel (change)="selectImage($event)" />
+    <input id="file-input" name="imageFile" type="file" accept="image/*" class="custom-file-input" [ngModel]="imageFile" (change)="selectImage($event)" />
 
     <button type="submit" class="post-create--btn_post">Post</button>
   </div>
