--- a/insta-clone/src/app/create-post/create-post.component.scss
+++ b/insta-clone/src/app/create-post/create-post.component.scss
@@ -10,7 +10,7 @@
       rgba(255, 255, 255, 0.92),
       rgba(255, 255, 255, 0.92)
     ),
-    url(https://lh3.googleusercontent.com/proxy/o6ElyPirttjJVz_H_lUZDC_EEMd6vQEPt_rm-CMcSG3_PGzeNfOJyqzCExI35eDsMlfpL9HGCUpnXvcWLD9z8RQaitPzooagNuD6v5KwEXiH8z7ppa2cASrcunOHaQK8vmj5fmC-rymWVpP8tPuY6kZeAEf0XtRUxnM);
+    url(https://api.time.com/wp-content/uploads/2019/07/instagram-eliminates-likes.jpg?w=600&quality=85);
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
@@ -131,5 +131,5 @@
       rgba(230, 230, 230, 0.92),
       rgba(230, 230, 230, 0.92)
     ),
-    url(https://lh3.googleusercontent.com/proxy/o6ElyPirttjJVz_H_lUZDC_EEMd6vQEPt_rm-CMcSG3_PGzeNfOJyqzCExI35eDsMlfpL9HGCUpnXvcWLD9z8RQaitPzooagNuD6v5KwEXiH8z7ppa2cASrcunOHaQK8vmj5fmC-rymWVpP8tPuY6kZeAEf0XtRUxnM);
+    url(https://api.time.com/wp-content/uploads/2019/07/instagram-eliminates-likes.jpg?w=600&quality=85);
 }
