--- a/insta-clone/src/app/feed/feed.component.html
+++ b/insta-clone/src/app/feed/feed.component.html
@@ -19,7 +19,7 @@
   </div>
 
   <div class="row">
-    <app-create-post></app-create-post>
+    <app-create-post (reloadPost)="reloadPosts()"></app-create-post>
 
     <div *ngFor = "let item of feed; let i = index" class="col-lg-5 offset-lg-2" style="background-color: white; border:1px solid #DBDBDB; margin-top: 2rem; margin-bottom: 2rem; border-radius: 5px;">
       <div class="row user-details-row" style="padding: 0.5rem 0;">
