--- a/insta-clone/src/app/feed/feed.component.html
+++ b/insta-clone/src/app/feed/feed.component.html
@@ -5,6 +5,8 @@
   
     <app-create-post (reloadPost)="reloadPosts()"  [bufferedImage]="bufferedImage"></app-create-post>
 
+    <app-user-info></app-user-info>
+    
     <div *ngFor = "let item of feed; let i = index" class="col-lg-5 offset-lg-2" style="background-color: white; border:1px solid #DBDBDB; margin-top: 2rem; margin-bottom: 2rem; border-radius: 5px;">
       <div class="row user-details-row" style="padding: 0.5rem 0;">
         <div class="col-lg-1">
